services/ingress_website.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: website
          servicePort: 80
          
      - path: /api/books
        backend:
          serviceName: shopapi
          servicePort: 3000
      - path: /shop
        backend:
          serviceName: shopui
          servicePort: 80
